2005-05-22  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_schedule): re-read current scheduler when
	resuming from xnarch_switch_to, in order to cope with migration
	while suspended.

2005-05-22  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/pod.h, include/nucleus/thread.h,
	include/nucleus/synch.h: Improve data locality.

	* nucleus/synch.c (xnsynch_release_all_ownerships): Fix empty
	claimq case.

2005-05-21  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_do_timers): Optimize the inner loop
	by rescheduling the timers on-the-fly.

2005-05-20  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_stop): Inline the fast path.

	* nucleus/ltt.c: Export xnltt_log_mark().

2005-05-19  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/Kconfig: Enable LTT support.

	* arch/i386/patches: Add combo patch against 2.6.9, merging LTT +
	Adeos r10c3.

	* nucleus/ltt.c: Shorten event labels.

2005-05-18  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-ppc/system.h (xnarch_read_timings): Fix
	CONFIG_ADEOS_PROFILING case.
	
2005-05-17  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.7.4

2005-05-17  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/types.h: Do not include <linux/config.h> in
	simulation context.

2005-05-16  Alexis Berlemont  <alexis.berlemont@free.fr>

	* skins/rtai/task.c (rt_task_create): Properly set the suspension
	depth to 1 whenever the task is left in suspended state after
	creation.
	(rt_task_set_periodic): Do not clear the suspension depth: this is
	irrelevant with respect to the underlying conjunctive suspension
	scheme (XNSUSP, XNDELAY and XNPEND are dissociated).

2005-05-15  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/registry.c (__registry_proc_callback): Do not
	dereference object->key in the unexport case, since it's stale
	memory after the real-time caller has destroyed the containing
	descriptor.
